Removed redundant serverVersion field and instead inlined creation of map passed into addCustomHeader method
Signed-off-by: Sam Hobbs <shobbs@scottlogic.com>